@@ -1,12 +1,9 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the "Elastic License
- * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
- * Public License v 1"; you may not use this file except in compliance with, at
- * your election, the "Elastic License 2.0", the "GNU Affero General Public
- * License v3.0 only", or the "Server Side Public License, v 1".
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
-
 package org.elasticsearch.xpack.gpu;
 
 import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
@@ -14,18 +11,15 @@ import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
 import org.elasticsearch.test.cluster.ElasticsearchCluster;
 import org.elasticsearch.test.rest.yaml.ClientYamlTestCandidate;
 import org.elasticsearch.test.rest.yaml.ESClientYamlSuiteTestCase;
-import org.junit.BeforeClass;
 import org.junit.ClassRule;
+import org.junit.rules.RuleChain;
+import org.junit.rules.TestRule;
 
 public class GPUClientYamlTestSuiteIT extends ESClientYamlSuiteTestCase {
 
-    @BeforeClass
-    public static void setup() {
-        assumeTrue("cuvs not supported", GPUSupport.isSupported());
-    }
-
-    @ClassRule
     public static ElasticsearchCluster cluster = createCluster();
+
+    public static GPUSupportedRule gpuSupportedRule = new GPUSupportedRule();
 
     private static ElasticsearchCluster createCluster() {
         var builder = ElasticsearchCluster.local()
@@ -33,8 +27,10 @@ public class GPUClientYamlTestSuiteIT extends ESClientYamlSuiteTestCase {
             .module("gpu")
             .setting("xpack.license.self_generated.type", "trial")
             .setting("xpack.security.enabled", "false")
+            .setting("vectors.indexing.use_gpu", "true")
             // Needed to get access to raw vectors from Lucene scorers
             .jvmArg("--add-opens=org.apache.lucene.core/org.apache.lucene.codecs.lucene99=org.elasticsearch.server")
+            .jvmArg("--add-opens=org.apache.lucene.core/org.apache.lucene.codecs.hnsw=org.elasticsearch.server")
             .jvmArg("--add-opens=org.apache.lucene.core/org.apache.lucene.internal.vectorization=org.elasticsearch.server");
 
         var libraryPath = System.getenv("LD_LIBRARY_PATH");
@@ -43,6 +39,9 @@ public class GPUClientYamlTestSuiteIT extends ESClientYamlSuiteTestCase {
         }
         return builder.build();
     }
+
+    @ClassRule
+    public static TestRule ruleChain = RuleChain.outerRule(gpuSupportedRule).around(cluster);
 
     public GPUClientYamlTestSuiteIT(final ClientYamlTestCandidate testCandidate) {
         super(testCandidate);
